# mozui

./: .gitignore  BUILDER.md  CANVAS.md  CHART.md  COMPARISON.md  COMPONENTS.md  CRATE_BOUNDARIES.md  Cargo.toml  DEVTOOLS.md  IMPLEMENTATION.md  LAYOUT.md  NATIVE.md  NATIVE2.md  OPTIMISATIONS.md  PLAN.md  SHEET.md  SHEET2.md  WEBVIEW.md  WINLIN.md  ideas.md  theme.json
OLD/crates/mozui-app/: Cargo.toml
OLD/crates/mozui-app/src/: actions.rs  app.rs  context.rs  history.rs
OLD/crates/mozui-renderer/: Cargo.toml
OLD/crates/mozui-renderer/src/: atlas.rs  draw.rs  image_pipeline.rs  lib.rs  rect_pipeline.rs
crates/mozui/: Cargo.toml  build.rs
crates/mozui-app/: Cargo.toml
crates/mozui-app/src/: actions.rs  app.rs  context.rs  keybindings.rs  lib.rs
crates/mozui-app/src/devtools/: inspector.rs  perf_overlay.rs  signal_panel.rs
crates/mozui-assets/: Cargo.toml  README.md
crates/mozui-assets/src/: lib.rs  native_assets.rs  wasm_assets.rs
crates/mozui-builder/: Cargo.toml
crates/mozui-builder/examples/: sample.mozui.json
crates/mozui-builder/src/: lib.rs  main.rs
crates/mozui-builder/src/builder/: builder_view.rs  canvas.rs  canvas_state.rs  drag.rs  history.rs  mod.rs  palette.rs  panels.rs  property_panel.rs  toolbar.rs  tree_view.rs
crates/mozui-builder/src/document/: component.rs  mod.rs  serialization.rs  style.rs  tree.rs
crates/mozui-builder/src/renderer/: document_renderer.rs  mod.rs
crates/mozui-components/: Cargo.toml  build.rs
crates/mozui-components/locales/: ui.yml
crates/mozui-components/src/: accordion.rs  actions.rs  alert.rs  anchored.rs  badge.rs  breadcrumb.rs  clipboard.rs  collapsible.rs  color_picker.rs  description_list.rs  element_ext.rs  focus_trap.rs  geometry.rs  global_state.rs  group_box.rs  history.rs  hover_card.rs  icon.rs  inspector.rs  kbd.rs  label.rs  lib.rs  link.rs  notification.rs  popover.rs  rating.rs  root.rs  select.rs  sheet.rs  skeleton.rs  slider.rs  spinner.rs  styled.rs  switch.rs  tag.rs  title_bar.rs  tooltip.rs  virtual_list.rs  window_border.rs  window_ext.rs
crates/mozui-components/src/avatar/: avatar.rs  avatar_group.rs
crates/mozui-components/src/button/: button.rs  button_icon.rs
crates/mozui-components/src/chart/: area_chart.rs  bar_chart.rs  candlestick_chart.rs  heatmap_chart.rs  histogram_chart.rs  line_chart.rs  mod.rs  pie_chart.rs  radar_chart.rs  ridge_line_chart.rs  sankey_chart.rs  scatter_chart.rs  stacked_area_chart.rs  stacked_bar_chart.rs  treemap_chart.rs  waterfall_chart.rs
crates/mozui-components/src/dialog/: alert_dialog.rs  content.rs  description.rs  footer.rs  mod.rs
crates/mozui-components/src/dock/: invalid_panel.rs  mod.rs  panel.rs  state.rs
crates/mozui-elements/: Cargo.toml
crates/mozui-elements/src/: accordion.rs  alert.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  checkbox.rs  clipboard_button.rs  collapsible.rs  color_picker.rs  command_palette.rs  date_picker.rs  description_list.rs  dialog.rs  div.rs  divider.rs  group_box.rs  hover_card.rs  icon.rs  img.rs  kbd.rs  label.rs  lib.rs  link.rs  list.rs  menu.rs  notification.rs  number_input.rs  pagination.rs  popover.rs  progress.rs  radio.rs  rating.rs  resizable.rs  scroll_container.rs  select.rs  sheet.rs  sidebar.rs  skeleton.rs  (+14 more)
crates/mozui-examples/: Cargo.toml
crates/mozui-examples/examples/: components_chart_showcase.rs  components_data_panel.rs  components_gold_chart.rs  components_gym_tracker.rs  components_spreadsheet.rs  components_weather.rs  custom_editor.rs  custom_preferences.rs  mixed_compare.rs  mixed_onboarding.rs  mixed_workspace.rs  native_controls.rs  native_effects.rs  native_sidebar_gradient.rs  native_window_chrome.rs  silk_browser.rs  webview_ipc.rs
crates/mozui-examples/src/: lib.rs
crates/mozui-fork/: Cargo.toml
crates/mozui-fork/src/: lib.rs
crates/mozui-macros/: Cargo.toml
crates/mozui-macros/src/: derive_action.rs  derive_app_context.rs  derive_inspector_reflection.rs  derive_into_element.rs  derive_refineable.rs  derive_render.rs  derive_visual_context.rs  mozui_macros.rs  property_test.rs  register_action.rs  styles.rs  test.rs
crates/mozui-native/: Cargo.toml
crates/mozui-native/examples/: controls_gallery.rs  dialogs_demo.rs  native_controls.rs
crates/mozui-native/ios/: IOSINT.md
crates/mozui-native/src/: alert.rs  breadcrumb.rs  button.rs  color_picker.rs  date_picker.rs  drag_drop.rs  file_dialog.rs  glass_effect.rs  inspector.rs  lib.rs  menu.rs  native_view.rs  picker.rs  popover.rs  progress.rs  search.rs  share.rs  sheet.rs  sidebar.rs  slider.rs  stepper.rs  switch.rs  symbol.rs  tab_view.rs  table.rs  text_field.rs  toolbar.rs  view.rs  visual_effect.rs
crates/mozui-platform/: Cargo.toml
crates/mozui-platform/src/: lib.rs  traits.rs
crates/mozui-renderer/: Cargo.toml
crates/mozui-renderer/src/: atlas.rs  draw.rs  glyph_pipeline.rs  gpu.rs  image_pipeline.rs  lib.rs  rect_pipeline.rs
crates/mozui-story/: Cargo.toml
crates/mozui-story/src/: app_menus.rs  embedded_themes.rs  gallery.rs  lib.rs  main.rs  themes.rs  title_bar.rs
crates/mozui-ui-macros/: Cargo.toml
crates/mozui-ui-macros/src/: lib.rs
crates/mozui-util-macros/: Cargo.toml
crates/mozui-util-macros/src/: util_macros.rs
crates/mozui-webview/: Cargo.toml  README.md  WEBVIEW.md  build.rs
crates/mozui-webview/src/: assets.rs  bridge.d.ts  bridge.js  builder.rs  ipc.rs  lib.rs  security.rs
crates/mozui/src/: _ownership_and_data_flow.rs  action.rs  app.rs  arena.rs  asset_cache.rs  bounds_tree.rs  color.rs  colors.rs  element.rs  executor.rs  geometry.rs  global.rs  inspector.rs  interactive.rs  key_dispatch.rs  keymap.rs  lib.rs  mozui.rs  platform.rs  platform_scheduler.rs  prelude.rs  profiler.rs  queue.rs  refineable.rs  scene.rs  shared_string.rs  style.rs  styled.rs  subscription.rs  svg_renderer.rs  tab_stop.rs  taffy.rs  test.rs  text_system.rs  view.rs  window.rs
crates/silk-runtime/: Cargo.toml
crates/silk-runtime/src/: config.rs  ipc_router.rs  lib.rs  silk_main_bridge.js  silk_renderer_bridge.js  window_manager.rs
(+635 files in other folders)
