[workspace]
resolver = "2"
default-members = ["crates/mozui-components"]
members = [
    # mozui core
    "crates/mozui",
    "crates/mozui-macros",

    # mozui UI component library
    "crates/mozui-components-macros",
    "crates/mozui-components",
    "crates/mozui-webview",
    "crates/mozui-builder",
    "crates/mozui-examples",
    "crates/silk-runtime",
    "mozui-silk",
]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
#
# Local workspace crates (mozui core)
#
mozui = { path = "crates/mozui" }
mozui-macros = { path = "crates/mozui-macros" }
#
# Local workspace crates (mozui UI component library)
#
mozui-components = { path = "crates/mozui-components", version = "0.5.1" }
mozui-components-macros = { path = "crates/mozui-components-macros", version = "0.5.1" }
#
# External crates
#
sum-tree = { version = "0.2.0", package = "zed-sum-tree" }
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "zed-reqwest", version = "0.12.15-zed" }
wgpu = { git = "https://github.com/zed-industries/wgpu.git", branch = "v29" }

ashpd = { version = "0.13", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }
anyhow = "1.0.86"
async-channel = "2.5.0"
async-fs = "2.1"
async-task = "4.7"
backtrace = "0.3"
bitflags = "2.6.0"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
ctor = "0.4.0"
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not",
] }
dirs = "4.0"
dunce = "1.0"
env_logger = "0.11"
futures = "0.3.32"
futures-concurrency = "7.7.1"
futures-lite = "1.13"
heapless = "0.9.2"
heck = "0.5"
http = "1.1"
http-body = "1.0"
image = "0.25.1"
indexmap = { version = "2.7.0", features = ["serde"] }
inventory = "0.3.19"
itertools = "0.14.0"
libc = "0.2"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
mach2 = "0.5"
metal = "0.33"
naga = { version = "29.0", features = ["wgsl-in"] }
nix = "0.29"
notify = "7.0.0"
objc = "0.2"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSActionCell",
    "NSButton",
    "NSButtonCell",
    "NSCell",
    "NSColor",
    "NSControl",
    "NSFont",
    "NSGraphics",
    "NSImage",
    "NSImageView",
    "NSProgressIndicator",
    "NSResponder",
    "NSSearchField",
    "NSSecureTextField",
    "NSSlider",
    "NSSliderCell",
    "NSSwitch",
    "NSTextField",
    "NSView",
    "NSVisualEffectView",
    "NSWindow",
] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = [
    "NSArray",
    "NSAttributedString",
    "NSBundle",
    "NSCoder",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSEnumerator",
    "NSError",
    "NSGeometry",
    "NSNotification",
    "NSNull",
    "NSObjCRuntime",
    "NSObject",
    "NSProcessInfo",
    "NSRange",
    "NSRunLoop",
    "NSString",
    "NSURL",
    "NSUndoManager",
    "NSValue",
    "objc2-core-foundation",
    "std",
] }
parking_lot = "0.12.1"
pollster = "0.4.0"
proc-macro2 = "1.0.93"
postage = { version = "0.5", features = ["futures-traits"] }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
profiling = "1"
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
quote = "1.0.9"
rand = "0.9"
raw-window-handle = "0.6.2"
rayon = "1.8"
regex = "1.5"
ropey = { version = "=2.0.0-beta.1", features = [
    "metric_lines_lf",
    "metric_utf16",
] }
rust-embed = { version = "8.11", features = ["include-exclude"] }
rust-i18n = "3"
rustc-hash = "2.1.0"
rustls-platform-verifier = "0.5.0"
rustls = { version = "0.23.26" }
schemars = { version = "1.0", features = ["indexmap2"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
serde_repr = "0.1"
serde_urlencoded = "0.7"
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
stacksafe = "0.1"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
take-until = "0.2.0"
tokio = { version = "1" }
tracing = "0.1.40"
tracing-subscriber = "0.3"
unicase = "2.6"
unicode-segmentation = "1.10"
url = "2.2"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
wasm-bindgen = "0.2.113"
web-time = "1.1.0"
errno = { version = "0.3.14", default-features = false }
windows-core = "0.61"

[workspace.dependencies.windows]
features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices"]
version = "0.58.0"

[workspace.lints.rust]
# The `objc` crate's sel_impl! macro checks cfg(feature = "cargo-clippy"), an
# outdated pattern replaced by cfg(clippy). Declaring the value expected here
# silences the warning without suppressing anything else.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
manual_is_multiple_of = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"
useless_conversion = "allow"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }
smol = { opt-level = 3 }
mozui = { opt-level = 3 }
mozui-macros = { opt-level = 3 }
tree-sitter = { opt-level = 3 }
ropey = { opt-level = 3 }
lsp-types = { opt-level = 3 }
markdown = { opt-level = 3 }
xml5ever = { opt-level = 3 }

[workspace.metadata.typos]
files.extend-exclude = ["**/fixtures/*"]

[workspace.metadata.typos.default.extend-identifiers]
consts = "consts"

[workspace.metadata.cargo-machete]
ignored = ["log", "anyhow", "serde"]

[patch.crates-io]
psm = { git = "https://github.com/rust-lang/stacker", branch = "master" }
