[package]
name = "mozui-app"
version.workspace = true
edition.workspace = true

[dependencies]
mozui-style = { workspace = true }
mozui-platform = { workspace = true }
mozui-renderer = { workspace = true }
mozui-elements = { workspace = true }
mozui-events = { workspace = true }
mozui-layout = { workspace = true }
mozui-text = { workspace = true }
mozui-reactive = { workspace = true }
mozui-executor = { workspace = true }
taffy = { workspace = true }
tracing = { workspace = true }
