[package]
name = "mozui-assets"
description = "Default bundled assets for mozui"
license = "Apache-2.0"
edition.workspace = true
publish = false
version = "0.5.1"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
mozui.workspace = true
log.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path", "include-exclude"] }

[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
