[package]
name = "mozui-builder"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "mozui-builder"
path = "src/main.rs"

[dependencies]
mozui.workspace = true
mozui-components.workspace = true
serde.workspace = true
serde_json.workspace = true
slotmap.workspace = true
anyhow.workspace = true
