[package]
name = "mozui-fork"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "mozui — a fork of GPUI with gpui-component baked in"

[lib]
doctest = false

[features]
default = ["font-kit"]
font-kit = ["gpui_platform/font-kit"]
inspector = ["gpui/inspector", "gpui-component/inspector"]
tree-sitter-languages = ["gpui-component/tree-sitter-languages"]

[dependencies]
# GPUI core (vendored from zed-industries/zed)
gpui = { path = "../../vendor/gpui" }
gpui_platform = { path = "../../vendor/gpui_platform", features = ["font-kit"] }
gpui_macros = { path = "../../vendor/gpui_macros" }

# gpui-component (vendored from longbridge/gpui-component)
gpui-component = { path = "../../vendor/gpui-component-ui" }
gpui-component-assets = { path = "../../vendor/gpui-component-assets" }
gpui-component-macros = { path = "../../vendor/gpui-component-macros" }

[dev-dependencies]
gpui = { path = "../../vendor/gpui", features = ["test-support"] }
