[package]
name = "mozui-macros"
version = "0.1.0"
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "Macros used by mozui"

[lints]
workspace = true

[features]
inspector = []

[lib]
path = "src/mozui_macros.rs"
proc-macro = true
doctest = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
mozui = { workspace = true, features = ["inspector"] }
