[package]
name = "mozui-native"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
description = "Native macOS/iOS components for the mozui UI framework"

[lints]
workspace = true

[dependencies]
mozui = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { workspace = true }
objc = { workspace = true }
objc2 = "0.6"
objc2-foundation = { workspace = true, features = [
    "NSString",
    "NSGeometry",
    "NSObjCRuntime",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSButton",
    "NSButtonCell",
    "NSControl",
    "NSActionCell",
    "NSTextField",
    "NSSwitch",
    "NSVisualEffectView",
    "NSView",
    "NSResponder",
    "NSColor",
    "NSColorWell",
    "NSFont",
    "NSCell",
    "NSGraphics",
    "NSWindow",
    "NSImage",
    "NSImageView",
    "NSToolbar",
    "NSToolbarItem",
    "NSSplitView",
    "NSApplication",
    "NSPopUpButton",
    "NSPopUpButtonCell",
    "NSSlider",
    "NSSliderCell",
    "NSProgressIndicator",
    "NSStepper",
    "NSStepperCell",
    "NSDatePicker",
    "NSDatePickerCell",
] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { workspace = true, features = ["NSString"] }
objc2-core-foundation = "0.3.2"
objc2-ui-kit = { version = "0.3.2", default-features = false, features = [
    "UIButton",
    "UIControl",
    "UIProgressView",
    "UIResponder",
    "UISlider",
    "UISwitch",
    "UITextField",
    "UIView",
    "objc2-core-foundation",
] }
