[package]
name = "mozui-platform"
version.workspace = true
edition.workspace = true

[dependencies]
mozui-style = { workspace = true }
mozui-events = { workspace = true }
raw-window-handle = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSString", "NSThread", "NSDate", "NSRunLoop"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSButton",
    "NSControl",
    "NSWindow",
    "NSView",
    "NSEvent",
    "NSResponder",
    "NSRunningApplication",
    "NSGraphics",
    "NSScreen",
    "NSPasteboard",
    "NSCursor",
    "NSTrackingArea",
    "NSMenu",
    "NSSavePanel",
    "NSOpenPanel",
] }
block2 = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["resource_manager"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
arboard = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Foundation",
] }
arboard = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Navigator",
    "Clipboard",
    "Screen",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "PointerEvent",
    "Element",
    "DomRect",
    "CssStyleDeclaration",
    "HtmlElement",
    "EventTarget",
    "AddEventListenerOptions",
] }
