[package]
name = "mozui-ui-macros"
description = "Macros for mozui UI components"
version = "0.5.1"
license = "Apache-2.0"
publish = false
edition.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[package.metadata.cargo-machete]
ignored = ["proc-macro2", "core-text"]
