[package]
name = "mozui-util-macros"
version = "0.1.0"
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "Utility macros for mozui"

[lints]
workspace = true

[lib]
path = "src/util_macros.rs"
proc-macro = true
doctest = false

[dependencies]
quote.workspace = true
syn.workspace = true
[features]
