[package]
name = "mozui"
version.workspace = true
edition.workspace = true

[dependencies]
mozui-app = { workspace = true }
mozui-style = { workspace = true }
mozui-platform = { workspace = true }
mozui-renderer = { workspace = true }
mozui-elements = { workspace = true }
mozui-events = { workspace = true }
mozui-icons = { workspace = true }
mozui-reactive = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "hello"
path = "../../examples/hello.rs"

[[example]]
name = "form"
path = "../../examples/form.rs"

[[example]]
name = "timer"
path = "../../examples/timer.rs"

[[example]]
name = "primitives"
path = "../../examples/primitives.rs"

[[example]]
name = "form_controls"
path = "../../examples/form_controls.rs"

[[example]]
name = "data_display"
path = "../../examples/data_display.rs"

[[example]]
name = "animations"
path = "../../examples/animations.rs"

[[example]]
name = "overlays"
path = "../../examples/overlays.rs"
