[package]
name = "mozui"
version = "0.2.2"
edition.workspace = true
description = "GPU-accelerated UI framework"
publish = false
license = "Apache-2.0"


[lints]
workspace = true

[features]
default = ["font-kit", "wayland", "x11", "windows-manifest"]
test-support = [
    "leak-detection",
    "wayland",
    "x11",
    "proptest",
]
inspector = ["mozui-macros/inspector"]
leak-detection = []
# iOS integration is staged so backend/lifecycle work can land before
# rendering, text input, and platform service bridges are complete.
ios = []
ios-metal = ["ios"]
ios-text = ["ios"]
ios-clipboard = ["ios"]
ios-url-open = ["ios"]
ios-credentials = ["ios"]
wayland = [
    "bitflags",
    "ashpd?/wayland",
    "calloop-wayland-source",
    "wayland-backend",
    "wayland-client",
    "wayland-cursor",
    "wayland-protocols",
    "wayland-protocols-plasma",
    "wayland-protocols-wlr",
    "filedescriptor",
    "xkbcommon",
    "open",
]
x11 = [
    "ashpd",
    "as-raw-xcb-connection",
    "x11rb",
    "xkbcommon",
    "xim",
    "x11-clipboard",
    "filedescriptor",
    "open",
    "scap?/x11",
]
screen-capture = [
    "scap",
]
runtime_shaders = []
windows-manifest = ["dep:embed-resource"]

[lib]
path = "src/mozui.rs"
doctest = false

[dependencies]
anyhow.workspace = true
async-task = "4.7"
backtrace.workspace = true
bitflags = { workspace = true, optional = true }

ctor.workspace = true
derive_more.workspace = true
etagere = "0.2"
flume = "0.11"
futures.workspace = true
futures-concurrency.workspace = true
mozui-macros.workspace = true
http.workspace = true
image.workspace = true
indexmap.workspace = true
inventory.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus = "1.13"
parking = "2.0.0"
parking_lot.workspace = true
postage.workspace = true
proptest = { workspace = true, optional = true }
chrono.workspace = true
profiling.workspace = true
rand.workspace = true
raw-window-handle = "0.6"
regex.workspace = true
rustc-hash.workspace = true
resvg = { version = "0.45.0", default-features = false, features = [
    "text",
    "system-fonts",
    "memmap-fonts",
    "raster-images"
] }
usvg = { version = "0.45.0", default-features = false }
ttf-parser = "0.25"
schemars.workspace = true
seahash = "4.1"
serde.workspace = true
serde_json.workspace = true
slotmap.workspace = true
smallvec.workspace = true
async-channel.workspace = true
stacksafe.workspace = true
strum.workspace = true
heapless.workspace = true
rayon.workspace = true
tracing.workspace = true
taffy = "=0.9.0"
thiserror.workspace = true
waker-fn = "1.2.0"
lyon = "1.0"
pin-project = "1.1.10"
spin = "0.10.0"
pollster.workspace = true
reqwest.workspace = true
url.workspace = true
uuid.workspace = true
web-time.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
uuid = { workspace = true, features = ["js"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
wasm_thread = { version = "0.3", features = ["es_modules"], optional = true }
web-sys = { version = "0.3", features = [
    "console",
    "CompositionEvent",
    "CssStyleDeclaration",
    "DataTransfer",
    "Document",
    "DomRect",
    "DragEvent",
    "Element",
    "EventTarget",
    "File",
    "FileList",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "MediaQueryList",
    "MediaQueryListEvent",
    "MouseEvent",
    "Navigator",
    "PointerEvent",
    "ResizeObserver",
    "ResizeObserverBoxOptions",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "ResizeObserverOptions",
    "Screen",
    "Storage",
    "VisualViewport",
    "Headers",
    "Request",
    "RequestInit",
    "RequestRedirect",
    "Response",
    "WheelEvent",
    "Window",
] }


[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
cocoa.workspace = true
cocoa-foundation.workspace = true
core-foundation.workspace = true
core-foundation-sys.workspace = true
core-graphics = "0.24"
core-video.workspace = true
core-text = "21"
dispatch2 = "0.3.1"
# WARNING: If you change this, you must also publish a new version of zed-font-kit to crates.io
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "110523127440aefb11ce0cf280ae7c5071337ec5", package = "zed-font-kit", version = "0.14.1-zed", optional = true }
foreign-types = "0.5"
log.workspace = true
objc.workspace = true
objc2 = { version = "0.6", optional = true }
objc2-metal = { version = "0.3", optional = true }
libc.workspace = true
mach2.workspace = true
#TODO: replace with "objc2"
metal.workspace = true
objc2-app-kit.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
dispatch2 = "0.3.1"
libc.workspace = true
objc2 = "0.6"
objc2-core-text = { version = "0.3.2", default-features = false, features = ["CTFont"] }
objc2-foundation.workspace = true
objc2-quartz-core = { version = "0.3.2", default-features = false, features = [
    "CALayer",
    "CAMetalLayer",
] }
objc2-ui-kit = { version = "0.3.2", default-features = false, features = [
    "UIApplication",
    "UIScreen",
    "UITraitCollection",
    "UIView",
    "UIViewController",
] }
# WARNING: If you change this, you must also publish a new version of zed-font-kit to crates.io
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "110523127440aefb11ce0cf280ae7c5071337ec5", package = "zed-font-kit", version = "0.14.1-zed", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "macos"))'.dependencies]
pathfinder_geometry = "0.5"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "windows"))'.dependencies]
scap = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation"] }
windows-core.workspace = true
windows-numerics = "0.2"
windows-registry = "0.5"

# Linux platform deps
[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
smol.workspace = true
oo7 = { version = "0.6", default-features = false, features = [
    "async-std",
    "native_crypto",
] }
calloop = "0.14.3"

# Used in both windowing options
ashpd = { workspace = true, optional = true }
filedescriptor = { version = "0.8.2", optional = true }
open = { version = "5.2.0", optional = true }
xkbcommon = { version = "0.8.0", features = ["wayland", "x11"], optional = true }

# WARNING: If you change this, you must also publish a new version of zed-font-kit to crates.io
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "110523127440aefb11ce0cf280ae7c5071337ec5", package = "zed-font-kit", version = "0.14.1-zed", optional = true }

# Wayland
calloop-wayland-source = { version = "0.4.1", optional = true }
wayland-backend = { version = "0.3.3", features = [
    "client_system",
    "dlopen",
], optional = true }
wayland-client = { version = "0.31.11", optional = true }
wayland-cursor = { version = "0.31.11", optional = true }
wayland-protocols = { version = "0.32.9", features = [
    "client",
    "staging",
    "unstable",
], optional = true }
wayland-protocols-plasma = { version = "0.3.9", features = [
    "client",
], optional = true }
wayland-protocols-wlr = { version = "0.3.9", features = [
    "client",
], optional = true }

# X11
as-raw-xcb-connection = { version = "1", optional = true }
x11rb = { version = "0.13.1", features = [
    "allow-unsafe-code",
    "xkb",
    "randr",
    "xinput",
    "cursor",
    "resource_manager",
    "sync",
    "dri3",
], optional = true }
# WARNING: If you change this, you must also publish a new version of zed-xim to crates.io
xim = { git = "https://github.com/zed-industries/xim-rs.git", rev = "16f35a2c881b815a2b6cdfd6687988e84f8447d8", features = [
    "x11rb-xcb",
    "x11rb-client",
], package = "zed-xim", version = "0.4.0-zed", optional = true }
x11-clipboard = { version = "0.9.3", optional = true }

# wgpu renderer deps (used on linux, freebsd, windows, ios, wasm)
[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "windows", target_os = "ios", target_family = "wasm"))'.dependencies]
wgpu.workspace = true
bytemuck = "1"
cosmic-text = "0.17.0"
swash = "0.2.6"


[dev-dependencies]
env_logger.workspace = true
lyon = { version = "1.0", features = ["extra"] }
proptest = { workspace = true }
rand.workspace = true
unicode-segmentation = { workspace = true }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen = { workspace = true }

[build-dependencies]
embed-resource = { version = "3.0", optional = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = "0.71"
cbindgen = { version = "0.28.0", default-features = false }
naga.workspace = true




[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "image"
path = "examples/image/image.rs"

[[example]]
name = "input"
path = "examples/input.rs"

[[example]]
name = "on_window_close_quit"
path = "examples/on_window_close_quit.rs"

[[example]]
name = "opacity"
path = "examples/opacity.rs"

[[example]]
name = "pattern"
path = "examples/pattern.rs"

[[example]]
name = "set_menus"
path = "examples/set_menus.rs"

[[example]]
name = "shadow"
path = "examples/shadow.rs"

[[example]]
name = "svg"
path = "examples/svg/svg.rs"

[[example]]
name = "tab_stop"
path = "examples/tab_stop.rs"

[[example]]
name = "text"
path = "examples/text.rs"

[[example]]
name = "text_wrapper"
path = "examples/text_wrapper.rs"

[[example]]
name = "tree"
path = "examples/tree.rs"

[[example]]
name = "uniform_list"
path = "examples/uniform_list.rs"

[[example]]
name = "window_shadow"
path = "examples/window_shadow.rs"

[[example]]
name = "grid_layout"
path = "examples/grid_layout.rs"

[[example]]
name = "list_example"
path = "examples/list_example.rs"

[[example]]
name = "mouse_pressure"
path = "examples/mouse_pressure.rs"
