[package]
name = "mozui-app"
version.workspace = true
edition.workspace = true

[dependencies]
mozui-style = { workspace = true }
mozui-platform = { workspace = true }
mozui-renderer = { workspace = true }
mozui-elements = { workspace = true }
mozui-events = { workspace = true }
mozui-layout = { workspace = true }
mozui-text = { workspace = true }
mozui-reactive = { workspace = true }
mozui-executor = { workspace = true }
taffy = { workspace = true }
tracing = { workspace = true }
mozui-devtools = { workspace = true }
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Element"] }
